fix comment author center alignment bug

--- a/frontend/css/post.css
+++ b/frontend/css/post.css
@@ -95,7 +95,7 @@
 
 .comment .media-left {
     margin-right: 5%;
-    max-width: 60px;
+    max-width: 80px;
 }
 
 .comment-author {
